--- a/index.html
+++ b/index.html
@@ -10,20 +10,16 @@
     <!-- Description Metadata-->
     <meta name="description" content="Portfolio Website" />
     <!-- Author Metadata -->
-    <meta name="author" content="Aditya Vikram Singh" />
+    <meta name="author" content="Tommy Liu" />
     <!-- Keyword Metadata -->
     <meta
       name="keywords"
-      content="Aditya Singh, Aditya Vikram Singh, Aditya Vikram Singh DPS,
-        Aditya Vikram Singh DPSRKP, Aditya Vikram Singh UMass, Aditya Vikram
-        Singh UMass Amherst, Aditya Vikram Singh New Delhi, Aditya Vikram
-        Singh Amherst, Aditya Vikram Singh ISSDC, Aditya Vikram Singh NASA,
-        Aditya Vikram Singh, Aditya Vikram Singh Website, Aditya V Singh"
+      content="Tommy Liu, Chenxing Liu, Tommy Liu website, Chenxing Liu website"
     />
     <!-- Webpage Logo -->
-    <link rel="shortcut icon" href="./assets/img/favicon.ico" />
+    <link rel="shortcut icon" href="./assets/img/icon.jpg" />
     <!-- Webpage Title -->
-    <title>Aditya Vikram Singh</title>
+    <title>Tommy Liu</title>
 
     <!-- Import CSS: Main Stylesheet -->
     <link rel="stylesheet" href="./assets/css/main.css" />
@@ -33,20 +29,20 @@
     <div id="particles-js">
       <div class="header">
         <h1>
-          <span class="site-title">ADITYA VIKRAM SINGH</span>
-          <span class="site-description">Programmer • Web Developer • Graphic Designer</span>
+          <span class="site-title">Chenxing (Tommy) Liu</span>
+          <span class="site-description">Programmer • Developer • Aspirant in Data Science</span>
         </h1>
         <div class="header-icons">
-          <a aria-label="My LinkedIn Profile" target="_blank" href="https://www.linkedin.com/in/avs1508/">
+          <a aria-label="My LinkedIn Profile" target="_blank" href="https://www.linkedin.com/in/chenxing-liu-916730204/">
             <i class="icon fa fa-linkedin" aria-hidden="true"></i>
           </a>
-          <a aria-label="My Github Profile" target="_blank" href="https://github.com/AVS1508">
+          <a aria-label="My Github Profile" target="_blank" href="https://github.com/TML17">
             <i class="icon fa fa-github-alt" aria-hidden="true"></i>
           </a>
-          <a aria-label="My Résumé" target="_blank" href="https://www.adityavsingh.com/resume.html">
+          <a aria-label="My Résumé" target="_blank" href="https://github.com/TML17/TML17.github.io/blob/main/Chenxing_Liu_Resume.pdf">
             <i class="icon fa fa fa-file-pdf-o" aria-hidden="true"></i>
           </a>
-          <a aria-label="Send Email" href="mailto:avsingh@umass.edu" target="_blank"
+          <a aria-label="Send Email" href="mailto:liutommy@grinnell.edu" target="_blank"
             ><i class="icon fa fa-envelope"></i
           ></a>
         </div>
@@ -66,26 +62,22 @@
         <picture>
           <source
             type="image/webp"
-            srcset="./assets/img/webp/Professional-Picture-Me.webp"
+            srcset="./assets/img/icon.jpg"
             alt="Professional Me"
             width="20%"
             style="border-radius: 50%"
           />
           <img
-            src="./assets/img/jpg/Professional-Picture-Me.jpg"
+            src="./assets/img/icon.jpg"
             alt="Professional Me"
             width="20%"
             style="border-radius: 50%"
           />
         </picture>
         <p>
-          I am a junior in the College of Information and Computer Sciences at the University of Massachusetts Amherst,
-          pursuing an undergraduate degree. I am majoring in Computer Science, with intent to double major in
-          Mathematics with Statistics and Data Science concentration. I'm involved as a Software Developer for BUILD
-          UMass, where I use my software engineering skills for pro-bono app/web development and tech consulting for the
-          Amherst community. I also serve as a Designer for the HackUMass Organizing Team, responsible for graphics
-          design and production for the annual hackathon. I am interested in exploring the fields of Software
-          Engineering, Data Science, and Machine Learning, and I am open to opportunities for the same.
+          I am a junior in Grinnell College majoring in Computer Science and concentrating Statistics, I am 
+          interested in Software Engineering, Data Science, and Machine Learning, and I am open to opportunities 
+          for the same.
         </p>
       </div>
 
@@ -98,7 +90,6 @@
           <i class="devicon-java-plain-wordmark colored"></i>
           <i class="devicon-cplusplus-plain colored"></i>
           <i class="devicon-javascript-plain colored"></i>
-          <p>My favorite languages for systems programming, software engineering, and data analysis.</p>
         </div>
 
         <!-- Technology Stack #2: Front-End -->
@@ -108,17 +99,14 @@
           <i class="devicon-bootstrap-plain-wordmark colored"></i>
           <i class="devicon-html5-plain-wordmark colored"></i>
           <i class="devicon-css3-plain-wordmark colored"></i>
-          <p>My preferred technologies for front-end web development and component design.</p>
         </div>
 
         <!-- Technology Stack #3: Back-End -->
         <div class="tech">
           <h2>Back-End</h2>
           <i class="devicon-nodejs-plain colored"></i>
-          <i class="devicon-express-original-wordmark colored"></i>
-          <i class="devicon-mongodb-plain-wordmark colored"></i>
+          <i class="devicon-mysql-plain colored"></i>
           <i class="devicon-postgresql-plain-wordmark colored"></i>
-          <p>My preferred technologies for back-end web programming and database architecture.</p>
         </div>
 
         <!-- Technology Stack #4: Tools -->
@@ -127,8 +115,6 @@
           <i class="devicon-git-plain-wordmark colored"></i>
           <i class="devicon-visualstudio-plain colored"></i>
           <i class="devicon-github-plain-wordmark colored"></i>
-          <i class="devicon-docker-plain-wordmark colored"></i>
-          <p>My favorite tools for version control, code editing, and container orchestration.</p>
         </div>
       </div>
     </section>
@@ -139,21 +125,21 @@
         <h1>Featured Projects</h1>
       </div>
 
-      <!-- User Project #1: Personal Résumé Website -->
+      <!-- User Project #1: Greenhouse Gas Emission Visualization -->
       <div class="user-projects">
         <div class="images-right">
           <picture>
-            <source type="image/webp" srcset="./assets/img/webp/Personal-Resume-Website.webp" alt="Personal Website" />
-            <img alt="Personal Website" src="./assets/img/jpg/Personal-Resume-Website.jpg" />
+            <source type="image/webp" srcset="./assets/img/png/img1.png" alt="Personal Website" />
+            <img alt="Greenhouse Gas Emission Visualization" src="./assets/img/png/img1.png" />
           </picture>
         </div>
         <div class="contents" style="text-align: center">
-          <h3>Personal Website</h3>
+          <h3>Greenhouse Gas Emission Visualization</h3>
           <div>
             <img
               height="32"
               width="32"
-              src="https://unpkg.com/simple-icons@3.4.0/icons/react.svg"
+              src="https://unpkg.com/simple-icons@3.4.0/icons/rstudio.svg"
               style="filter: invert(73%) sepia(74%) saturate(1552%) hue-rotate(169deg) brightness(109%) contrast(97%)"
             />
             &nbsp;
@@ -167,108 +153,95 @@
             <img height="32" width="32" src="https://unpkg.com/simple-icons@3.4.0/icons/github.svg" />
           </div>
           <p style="text-align: justify">
-            I developed and designed a website using ReactJS and Bootstrap, hosted on Github Pages, to showcase my web
-            presence, story, work experience, education, projects, and achievements in an interactive and
-            visually-appealing format.
+            I developed a robust data visualization application and implemented user-friendly interactive controls, using R and Shiny to dynamically represent greenhouse gas emissions by countries and Instituted a clean and modern web interface design, ensuring an engaging user experience with dynamic hover effects and transparency settings.
           </p>
-          <a class="project-link" target="_blank" href="https://www.adityavsingh.com/">Check it out!</a>
+          <a class="project-link" target="_blank" href="https://tml17.shinyapps.io/csc324_individual_project/">Check it out!</a>
         </div>
       </div>
 
-      <!-- User Project #2: Summer 2020 Project -->
+      <!-- User Project #2: DSI Performance Tool -->
       <div class="user-projects">
         <div class="images-left">
           <picture>
-            <source type="image/webp" srcset="./assets/img/webp/Perpetual-Crusades.webp" alt="Perpetual Crusades" />
-            <img alt="Perpetual Crusades" src="./assets/img/jpg/Perpetual-Crusades.jpg" />
+            <source type="image/webp" srcset="./assets/img/png/img2.png" alt="Perpetual Crusades" />
+            <img alt="DSI Performance Tool" src="./assets/img/png/img2.png" />
           </picture>
         </div>
         <div class="contents-right" style="text-align: center">
-          <h3>Perpetual Crusades</h3>
+          <h3>DSI Performance Tool</h3>
           <img
             height="32"
             width="32"
-            src="https://unpkg.com/simple-icons@3.4.0/icons/react.svg"
+            src="https://unpkg.com/simple-icons@3.4.0/icons/python.svg"
             style="filter: invert(73%) sepia(74%) saturate(1552%) hue-rotate(169deg) brightness(109%) contrast(97%)"
           />
           &nbsp;
           <img
             height="32"
             width="32"
-            src="https://unpkg.com/simple-icons@3.4.0/icons/css3.svg"
+            src="https://unpkg.com/simple-icons@3.4.0/icons/flask.svg"
             style="filter: invert(33%) sepia(29%) saturate(3844%) hue-rotate(184deg) brightness(90%) contrast(84%)"
           />
           &nbsp;
           <img height="32" width="32" src="https://unpkg.com/simple-icons@3.4.0/icons/github.svg" />
           <p style="text-align: justify">
-            I created a two-player online dice-based board game with a theme loosely set around Dungeons & Dragons. It
-            was developed as a submission for Penn Apps XXI, using ReactJS and CSS Grid Layouts for design and hosted on
-            GitHub Pages.
+            The DSI-Performance-Tool represents a joint project carried out by a five-member team, crafted using Python and Flask, and is designed for analyzing food security policies. This tool is notable for its strong data processing abilities and its capacity for generating dynamic charts. My role mainly involved front-end development, concentrating on improving the user interface and overall user experience. This effort ensured that the tool was not only analytically robust but also intuitive and easy to use.
           </p>
-          <a class="project-link" target="_blank" href="https://github.com/AVS1508/Summer-2020-Project"
+          <a class="project-link" target="_blank" href="https://github.com/DemocraticSystemsIncorporated/DSI-Performance-Tool/tree/all_years"
             >Check it out!</a
           >
         </div>
       </div>
 
-      <!-- User Project #3: COVID-19 Tracker App -->
+      <!-- User Project #3: Contrastive Canonical Correlation Analysis (cCCA) Development -->
       <div class="user-projects">
         <div class="images-right">
           <picture>
-            <source type="image/webp" srcset="./assets/img/webp/COVID19-Tracker-App.webp" alt="COVID-19 Tracker App" />
-            <img alt="COVID-19 Tracker App" src="./assets/img/jpg/COVID19-Tracker-App.jpg" />
+            <source type="image/webp" srcset="./assets/img/png/img3.png" alt="COVID-19 Tracker App" />
+            <img alt="Contrastive Canonical Correlation Analysis (cCCA) Development" src="./assets/img/png/img3.png" />
           </picture>
         </div>
         <div class="contents" style="text-align: center">
-          <h3>COVID-19 Tracker App</h3>
+          <h3>Contrastive Canonical Correlation Analysis (cCCA) Development</h3>
           <div>
             <img
               height="32"
               width="32"
-              src="https://unpkg.com/simple-icons@3.4.0/icons/javascript.svg"
+              src="https://unpkg.com/simple-icons@3.4.0/icons/python.svg"
               style="filter: invert(96%) sepia(47%) saturate(4151%) hue-rotate(338deg) brightness(100%) contrast(95%)"
             />
           </div>
           <p style="text-align: justify">
-            I created a web application for tracking the spread of COVID-19. Using Johns Hopkins University Center For
-            Systems Science and Engineering API, the website processes the COVID-19 data to create statistical
-            projections through graphs and charts.
+            I Addressed the limitation of CCA by integrating principles from Contrastive Learning to emphasize differential features. Then introduced concepts of target datasets and background datasets, allowing cCCA to maximize correlation and intra-view variance of target data while minimizing background data variance. Developed an algorithm and conducted experiments on an artificially synthesized dataset and two real datasets using Python, showcasing superior effectiveness of the cCCA algorithm.
           </p>
-          <a class="project-link" target="_blank" href="https://www.adityavsingh.com/covid19-tracker-app">
+          <a class="project-link" target="_blank" href="https://github.com/TML17/TML17.github.io/blob/main/Canonical__Correlation_Analysis_based_on_Contrastive_Learning.pdf">
             Check it out!
           </a>
         </div>
       </div>
 
-      <!-- Use Project #4: Valuto: Account Management System -->
+      <!-- Use Project #4: Mixed-effects Logistic Regression Model on Fosterage Children -->
       <div class="user-projects">
         <div class="images-left">
           <picture>
-            <source
-              type="image/webp"
-              srcset="./assets/img/webp/Valuto-Account-Management.webp"
-              alt="Valuto: Account Management System"
-            />
-            <img alt="Valuto: Account Management System" src="./assets/img/jpg/Valuto-Account-Management.jpg" />
+            <source type="image/webp" srcset="./assets/img/png/img4.png" alt="Valuto: Account Management System"/>
+            <img alt="Mixed-effects Logistic Regression Model on Fosterage Children" src="./assets/img/png/img4.png" />
           </picture>
         </div>
         <div class="contents-right" style="text-align: center">
-          <h3>Valuto: Account Management System</h3>
+          <h3>Mixed-effects Logistic Regression Model on Fosterage Children</h3>
           <div>
             <img
               height="32"
               width="32"
-              src="https://unpkg.com/simple-icons@3.4.0/icons/cplusplus.svg"
+              src="https://unpkg.com/simple-icons@3.4.0/icons/rstudio.svg"
               style="filter: invert(22%) sepia(77%) saturate(1486%) hue-rotate(183deg) brightness(101%) contrast(103%)"
             />
           </div>
           <p style="text-align: justify">
-            I developed a CLI system for accounting management and financial statement maintenance. The purpose of the
-            system is to maintain a record of the funds received, used, disseminated and donated by an organization.
-            Details of transactions and maintenance of a budget and tallying of current balance/inventory in cash/kind
-            is incorporated in this system.
+            I Systematically built and evaluated mixed-effects logistic regression models. Manually processing stepwise regression with varying predictor combinations, using the AIC for optimal model selection. In the process of development, I implemented parallel processing techniques for efficient computation during model evaluation, handling the computational complexity of evaluating numerous model combinations.
           </p>
-          <a class="project-link" target="_blank" href="https://github.com/AVS1508/Valuto-Account-Management-System">
+          <a class="project-link" target="_blank" href="https://github.com/TML17/Dominican-Republic-Foster-Children">
             Check it out!
           </a>
         </div>
@@ -276,9 +249,9 @@
     </section>
 
     <footer class="footer">
-      <p>&copy; Aditya Vikram Singh, 2020</p>
+      <p>In reference to <a href="https://github.com/AVS1508/My-Alternate-Portfolio-Website"> the website</a> on Github.</p>
     </footer>
-
+    
     <!-- Import JS: Particles Theme -->
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <!-- Import JS: Sweet Scroll -->
